# Ponderada_2_Ingestao

./: README.md  pyproject.toml
src/ponderadaa/: motor_ingestao.py
tests/: test_motor_ingestao.py
